@@ -14,23 +14,11 @@ module ActiveMerchant #:nodoc:
       self.homepage_url = 'https://www.fatzebra.com.au/'
       self.display_name = 'Fat Zebra'
 
-      # Setup a new instance of the gateway.
-      #
-      # The options hash should include :username and :token
-      # You can find your username and token at https://dashboard.fatzebra.com.au
-      # Under the Your Account section
       def initialize(options = {})
         requires!(options, :username, :token)
         super
       end
 
-      # To create a purchase on a credit card use:
-      #
-      #   purchase(money, creditcard)
-      #
-      # To charge a tokenized card
-      #
-      #   purchase(money, "abzy87u", :cvv => "123")
       def purchase(money, creditcard, options = {})
         post = {}
 
@@ -65,11 +53,6 @@ module ActiveMerchant #:nodoc:
         commit(:post, "purchases/#{CGI.escape(authorization)}/capture", post)
       end
 
-      # Refund a transaction
-      #
-      # amount - Integer - the amount to refund
-      # txn_id - String - the original transaction to be refunded
-      # reference - String - your transaction reference
       def refund(money, txn_id, options={})
         post = {}
 
@@ -81,9 +64,6 @@ module ActiveMerchant #:nodoc:
         commit(:post, "refunds", post)
       end
 
-      # Tokenize a credit card
-      #
-      # The token is returned in the Response#authorization
       def store(creditcard, options={})
         post = {}
         add_creditcard(post, creditcard)
@@ -104,14 +84,12 @@ module ActiveMerchant #:nodoc:
 
       private
 
-      # Add the money details to the request
       def add_amount(post, money, options)
         post[:currency] = (options[:currency] || currency(money))
         post[:currency] = post[:currency].upcase if post[:currency]
         post[:amount] = money
       end
 
-      # Add the credit card details to the request
       def add_creditcard(post, creditcard, options = {})
         if creditcard.respond_to?(:number)
           post[:card_number] = creditcard.number
@@ -134,7 +112,7 @@ module ActiveMerchant #:nodoc:
         extra = {}
         extra[:ecm] = "32" if options[:recurring]
         extra[:cavv] = options[:cavv] if options[:cavv]
-        extra[:xid] = options[:cavv] if options[:xid]
+        extra[:xid] = options[:xid] if options[:xid]
         extra[:sli] = options[:sli] if options[:sli]
         extra[:name] = options[:merchant] if options[:merchant]
         extra[:location] = options[:merchant_location] if options[:merchant_location]
@@ -149,7 +127,6 @@ module ActiveMerchant #:nodoc:
         post[:customer_ip] = options[:ip] || "127.0.0.1"
       end
 
-      # Post the data to the gateway
       def commit(method, uri, parameters=nil)
         response = begin
           parse(ssl_request(method, get_url(uri), parameters.to_json, headers))
@@ -194,7 +171,6 @@ module ActiveMerchant #:nodoc:
         end
       end
 
-      # Parse the returned JSON, if parse errors are raised then return a detailed error.
       def parse(response)
         begin
           JSON.parse(response)
@@ -209,13 +185,11 @@ module ActiveMerchant #:nodoc:
         end
       end
 
-      # Build the URL based on the AM mode and the URI
       def get_url(uri)
         base = test? ? self.test_url : self.live_url
         base + "/" + uri
       end
 
-      # Builds the auth and U-A headers for the request
       def headers
         {
           "Authorization" => "Basic " + Base64.strict_encode64(@options[:username].to_s + ":" + @options[:token].to_s).strip,
